longhorn/longhorn.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn
  namespace: longhorn-system
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`longhorn.mandariini.uk`)
      middlewares:
        - name: authentik
          namespace: authentik
      priority: 10
      services:
        - name: longhorn-frontend
          port: 80
    - kind: Rule
      match: "Host(`longhorn.mandariini.uk`) && PathPrefix(`/outpost.goauthentik.io/`)"
      priority: 15
      services:
          - kind: Service
            name: ak-outpost-authentik-embedded-outpost
            port: 9000
  tls:
    secretName: mandariini-uk-tls
